# StratusBox

./: .gitignore  README.md
.devcontainer/: devcontainer.json
.devcontainer/core/: devcontainer.json
.devcontainer/lite/: devcontainer.json
common/stratus-chunk/: Cargo.toml
common/stratus-chunk/src/: lib.rs
common/stratus-crypto/: Cargo.toml
common/stratus-crypto/src/: lib.rs
common/stratus-storage/: Cargo.toml
common/stratus-storage/src/: lib.rs
stratus-core/: Cargo.toml  README.md
stratus-core/engine/: Cargo.toml
stratus-core/engine/src/: lib.rs
stratus-core/gateway/: Cargo.toml
stratus-core/gateway/src/: main.rs
stratus-lite/: README.md  go.mod
stratus-lite/cmd/stratus-lite/: main.go
